Added day creation dialog to student card options

--- a/src/app/shared/components/menu-options/menu-options.component.html
+++ b/src/app/shared/components/menu-options/menu-options.component.html
@@ -2,8 +2,13 @@
   <fa-icon class="{{'mat-icon-' + buttonSize}}" [ngClass]="{'mat-hint': !lightColor}" icon="ellipsis-v"></fa-icon>
 </button>
 <mat-menu #menuOptions="matMenu">
-  <button *ngFor="let item of options" mat-menu-item (click)="openDialog(item.dialog?.component, item.dialog?.config)">
-    <fa-icon class="mat-icon-16 mat-hint" [icon]="item.icon"></fa-icon>
-    <span>{{item.name | translate}}</span>
-  </button>
+  <ng-container *ngFor="let item of options">
+    <button *ngIf="!item.divider else divider" mat-menu-item (click)="openDialog(item.dialog?.component, item.dialog?.config)">
+      <fa-icon class="mat-icon-16 mat-hint" [icon]="item.icon"></fa-icon>
+      <span>{{item.name | translate}}</span>
+    </button>
+  </ng-container>
+  <ng-template #divider>
+    <mat-divider></mat-divider>
+  </ng-template>
 </mat-menu>
