--- a/src/app/classroom/components/side-menu/side-menu.component.html
+++ b/src/app/classroom/components/side-menu/side-menu.component.html
@@ -8,7 +8,7 @@
       </a>
       <div class="mt-1" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
 
-        
+
       </div>
     </div>
 
@@ -31,15 +31,20 @@
                 <a mat-list-item (click)="onItemSelected($event, child)" [ngClass]="{'expanded': child.expanded}">
                   <span class="mat-hint pl-1 ml-1 truncate">{{child?.name}}</span>
                   <span fxFlex></span>
-                  <button class="action-button"mat-icon-button [matMenuTriggerFor]="menuOptionsId" attr.aria-label="{{'OPTION_MENU' | translate}}" (click)=$event.stopPropagation()>
+                  <button class="action-button" mat-icon-button [matMenuTriggerFor]="menuOptionsId" attr.aria-label="{{'OPTION_MENU' | translate}}" (click)=$event.stopPropagation()>
                     <fa-icon class="mat-hint" icon="ellipsis-v"></fa-icon>
                   </button>
                 </a>
                 <mat-menu #menuOptionsId="matMenu">
-                  <button *ngFor="let option of menuOptions" mat-menu-item (click)="openMenuOption($event, item, child, option)">
-                    <fa-icon class="mat-icon-16 mat-hint" [icon]="option.icon"></fa-icon>
-                    <span class="truncate">{{option.name | translate}}</span>
-                  </button>
+                  <ng-container *ngFor="let option of menuOptions">
+                    <button *ngIf="!option.divider else divider" mat-menu-item (click)="openMenuOption($event, item, child, option)">
+                      <fa-icon class="mat-icon-16 mat-hint" [icon]="option.icon"></fa-icon>
+                      <span class="truncate">{{option.name | translate}}</span>
+                    </button>
+                  </ng-container>
+                  <ng-template #divider>
+                    <mat-divider></mat-divider>
+                  </ng-template>
                 </mat-menu>
               </ng-container>
             </div>
