--- a/src/app/classroom/components/header/header.component.scss
+++ b/src/app/classroom/components/header/header.component.scss
@@ -41,6 +41,7 @@ a.clickable-phone-number {
 .title-logo {
   top: 5px;
   left: calc(100vw/2 - 22px);
+  width: calc(var(--main-header-size) - 10px);
 }
 
 .header-avatar-button {
