--- a/src/app/classroom/components/side-menu/side-menu.component.scss
+++ b/src/app/classroom/components/side-menu/side-menu.component.scss
@@ -11,7 +11,7 @@
   }
 
   .nav-list {
-    max-height: calc(100vh - 118px - var(--main-header-size) * 3);
+    max-height: calc(100vh - 80px - 4rem - 61px);
   }
 }
 
