--- a/src/app/classroom/settings/components/credits/credits.component.html
+++ b/src/app/classroom/settings/components/credits/credits.component.html
@@ -1,12 +1,12 @@
-<div class="credits-container p-h" fxLayout="column" fxLayoutAlign="start center">
-
-  <!-- Flaticon avatars -->
-  <span class="mat-hint mb-q">Los avatares de los alumnos han sido diseñados por <a class="link" target="_blank" href="https://www.freepik.com" title="Freepik">Freepik</a> desde <a class="link" target="_blank" href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></span>
+<div class="credits-container mat-small p-h" fxLayout="column" fxLayoutAlign="start center">
 
   <!-- @aledroner -->
-  <span class="mat-hint"><b>Aula13</b> ha sido programada enteramente con mucho
-    <fa-icon class="mat-icon-16 mat-hint error-color" icon="heart"></fa-icon>
+  <span class="mat-hint">© 2020<b> {{'APP_TITLE' | translate}}</b>
+    <fa-icon class="mat-icon-16 mat-hint error-color ml-q" icon="heart"></fa-icon>
     por <a class="link" target="_blank" href="https://github.com/aledroner" title="Github de @aledroner">@aledroner</a>
   </span>
+
+  <!-- Flaticon avatars -->
+  <span class="mat-hint mb-q">Diseño de avatares por <a class="link" target="_blank" href="https://www.freepik.com" title="Freepik">Freepik</a> en <a class="link" target="_blank" href="https://www.flaticon.es/" title="Flaticon">flaticon</a></span>
 
 </div>
