--- a/src/app/classroom/settings/components/credits/credits.component.scss
+++ b/src/app/classroom/settings/components/credits/credits.component.scss
@@ -1,8 +1,8 @@
 .credits-container {
-  position: fixed;
+  // position: fixed;
   width: 100%;
-  left: 0;
-  bottom: calc(var(--main-header-size) + 1rem);
+  // left: 0;
+  // bottom: calc(var(--main-header-size) + 1rem);
   text-align: center;
 
   a {
