--- a/src/app/classroom/components/classroom/classroom.component.html
+++ b/src/app/classroom/components/classroom/classroom.component.html
@@ -12,7 +12,7 @@
       <a13-header></a13-header>
 
       <!-- Router -->
-      <main class="overflow-scroll mat-typography">
+      <main class="main-content-bg overflow-scroll mat-typography">
         <router-outlet></router-outlet>
       </main>
 
