--- a/src/app/classroom/components/side-menu/side-menu.component.html
+++ b/src/app/classroom/components/side-menu/side-menu.component.html
@@ -48,6 +48,6 @@
     </div>
 
     <!-- Credits -->
-    <a13-credits class="last-item"></a13-credits>
+    <a13-credits class="shadow-top-light"></a13-credits>
   </div>
 </div>
