--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -12,7 +12,6 @@
   }
 }
 
-
 .padding-content {
   padding: var(--main-padding-size);
 }
@@ -220,6 +219,12 @@
   height: 100%;
   overflow: hidden;
 
+  .main-content-bg {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
+  }
+
   .overflow-scroll {
     flex: 1 0 auto;
     min-height: auto;
@@ -243,6 +248,14 @@
     0px 2px 1px 0px rgba(34, 34, 34, 0.01),
     0px 4px 2px 0px rgba(34, 34, 34, 0.01),
     0px 1px 2px 0px rgba(34, 34, 34, 0.01) !important;
+}
+
+.shadow-top-light {
+  box-shadow: -2px 0 2px rgba($color: #000000, $alpha: .12);
+}
+
+.shadow-bottom-light {
+  box-shadow: 2px 0 2px rgba($color: #000000, $alpha: .12);
 }
 
 // Arhived student
