--- a/src/app/shared/components/floating-button/floating-button.component.scss
+++ b/src/app/shared/components/floating-button/floating-button.component.scss
@@ -1,7 +1,7 @@
 .floating-button {
   position: fixed;
   bottom: 5rem;
-  right: 1.75rem;
+  right: calc((100% - var(--main-sm-size)) / 2 + var(--main-padding-size));
   z-index: 1;
   height: 4rem;
   width: 4rem;
@@ -36,4 +36,10 @@
   position: relative;
   top: 1px;
   margin-left: 5px;
+}
+
+@media only screen and (max-width: 960px) {
+  .floating-button {
+    right: 1.75rem;
+  }
 }
