--- a/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
+++ b/src/app/classroom/day-profile/components/day-profile/day-profile.component.html
@@ -27,13 +27,13 @@
           <div class="header-info" fxLayout="column" fxLayoutAlign="center">
 
             <!-- Archived -->
-            <div *ngIf="day?.archived" class="mat-small error mb-q">
+            <div *ngIf="day?.archived" class="mat-small error mb-q" (dblclick)="tapToEdit(day)">
               <fa-icon class="mr-q mat-icon-14 error-color" icon="box"></fa-icon>
               <span class="error-color"> {{'ARCHIVED' | translate}} </span>
             </div>
 
             <a class="mat-h3 mb-0 pointer student-name" [routerLink]="[ '/classroom/student', day?.studentId ]">{{day?.student?.personal?.name}}</a>
-            <span class="mat-small mat-hint">{{day?.date | date: 'fullDate'}}</span>
+            <span class="mat-small mat-hint" (dblclick)="tapToEdit(day)">{{day?.date | date: 'fullDate'}}</span>
           </div>
         </div>
 
@@ -57,7 +57,7 @@
           </ng-container>
         </ng-template>
 
-        <div *ngIf="data$ | async as day; else dayContentSkeleton" [innerHTML]="day?.content"></div>
+        <div *ngIf="data$ | async as day; else dayContentSkeleton" [innerHTML]="day?.content" (dblclick)="tapToEdit(day)"></div>
       </div>
     </div>
   </div>
