--- a/src/app/classroom/students/components/student-creation/student-creation.component.scss
+++ b/src/app/classroom/students/components/student-creation/student-creation.component.scss
@@ -1,14 +1,12 @@
 .avatar-selected {
-  padding: 0 5px;
-  max-width: 130px;
-  margin-bottom: 1rem;
+  max-width: 100%;
   box-sizing: border-box;
 }
 
 .full-avatar {
   width: 100%;
-  max-width: 230px;
-  max-height: 230px;
+  max-width: 240px;
+  max-height: 240px;
 }
 
 .full {
